# collectd-plugin-intel_cpu_energy

./: Makefile  README.md  energy-type.db  intel_cpu_energy.c  rapl.c  rapl.h  types.db
intel_cpu_energy/: Makefile.am
